--- a/PokemonApp/Base.lproj/Main.storyboard
+++ b/PokemonApp/Base.lproj/Main.storyboard
@@ -116,7 +116,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PokemonLogo" translatesAutoresizingMaskIntoConstraints="NO" id="T0h-o7-UyN">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="T0h-o7-UyN">
                                 <rect key="frame" x="46.666666666666657" y="276" width="300" height="300"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="300" id="6nA-pc-ouF"/>
@@ -173,7 +173,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="PokemonLogo" width="1200" height="442"/>
         <image name="star" catalog="system" width="128" height="116"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
